Compucom CCQA/src/objects/Upload_File__c.object
<CustomObject>
    <fields>
        <fullName>BSLA__c</fullName>
        <label>BSLA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Description__c</fullName>
        <label>CC Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDR_Description__c</fullName>
        <label>CDR Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CDR__c</fullName>
        <label>CDR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <label>Contract Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Month_Expected_Revenue__c</fullName>
        <label>Current Month Expected Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ErrorMsg__c</fullName>
        <label>ErrorMsg</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geo_Description__c</fullName>
        <label>Geo Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <label>Geo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Stream__c</fullName>
        <label>Revenue Stream</label>
        <type>TextArea</type>
    </fields>
    <label>FCST Actual Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ErrorMsg__c</columns>
        <columns>BSLA__c</columns>
        <columns>CC__c</columns>
        <columns>CC_Description__c</columns>
        <columns>CDR__c</columns>
        <columns>CDR_Description__c</columns>
        <columns>Contract_Id__c</columns>
        <columns>Current_Month_Expected_Revenue__c</columns>
        <columns>Geo__c</columns>
        <columns>Geo_Description__c</columns>
        <columns>Period__c</columns>
        <columns>Revenue_Stream__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Upload File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCST Actual Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>